--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Oct 25, 2022  - Hot fixes
+                **v3.3.19**
+                * **fixed**   : Fixed an error related to Phase Randomized Masket Map calculation
+
+
 Sept 7, 2022  - Adding functionalities (v3.3.18)
                 **v3.3.18**
                 -----------
