--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Jan 24, 2023 -  - Compatibility with v4.1.2 CS version
+                **v4.0.2**
+Jan 18, 2023 -  - Compatibility with v4.1.1 CS version
+                **v4.0.1**
 Nov 8, 2022  -  - Compatibility with v4.0.x CS version
                 **v4.0.0**
 
