* Compatibility wit v4.2.1   * Deprecating all versions of CS v2.x.x to v3.0.0

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+March 16, 2023 -  **v4.0.4**
+                 Compatibility with cryoSPARC v4.2.1
+
 March 1, 2023 -  **v4.0.3**
                  Compatibility with cryoSPARC v4.2
                  Fixed an error importing volumes with halves
