--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,10 @@
+Dec 22, 2023    - **v4.0.10**
+                Add new protocols:
+                 * **3D Variability Analysis**: Protocol to compute the principle modes of variability with a dataset of aligned particles
+                 * **3D Variability Display**: Protocol to create various versions of a 3D variability result that can be used for display
+                 * **Blob Picker**: Automatically picks particles by searching for Gaussian signals.
+
+
 Nov 17, 2023    - **v4.0.9**
                  Compatibility with cryoSPARC v4.4.0
                  Handling aborted protocols/jobs
