adding a new protocol: patch ctf estimation

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,7 +3,7 @@ Dec 22, 2023    - **v4.0.10**
                  * **3D Variability Analysis**: Protocol to compute the principle modes of variability with a dataset of aligned particles
                  * **3D Variability Display**: Protocol to create various versions of a 3D variability result that can be used for display
                  * **Blob Picker**: Automatically picks particles by searching for Gaussian signals.
-
+                 * **Patch CTF Estimation**: Patch-based CTF estimation automatically estimates defocus variation for tilted, bent, deformed samples and is accurate for all particle sizes and types including flexible and membrane proteins.
 
 Nov 17, 2023    - **v4.0.9**
                  Compatibility with cryoSPARC v4.4.0
