--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+March 27, 2025 - **v4.2.1**
+                 Fixing errors related the classification protocols
+
 Dec 19, 2024  - **v4.2.0**
                 Compatibility with cryoSPARC v4.6.2
                 Adding 3D Flex Generator Protocol
